Smiles integration. No need anymore for separate stylish code.

--- a/src/main.scss
+++ b/src/main.scss
@@ -39,6 +39,7 @@
 @import "pagination";
 @import "loading";
 @import "popupBox";
+@import "smiles";
 
 // -----------------------------------------------------------------------------
 // 6. PAGES & SECTIONS
