--- a/src/userPanel.scss
+++ b/src/userPanel.scss
@@ -91,6 +91,7 @@
             background: $middlegray !important;
             color: $black !important;
             border: none !important;
+            border-radius: 3px !important;
             font-weight: lighter !important;
 
             &:hover {
