--- a/src/base.scss
+++ b/src/base.scss
@@ -36,6 +36,7 @@ $awards: (
 @mixin button-base {
   font-weight: lighter !important;
   border: none !important;
+  border-radius: 3px !important;
 }
 
 @mixin button-style($bg-color, $text-color) {
@@ -227,15 +228,17 @@ pre {
 }
 
 // Progress Components
+#content .achieve .achieve-content .progress,
 .progress {
-  background: $middlegray !important;
+  background: $black !important;
 
   &-bar {
-    filter: hue-rotate(80deg) !important;
+    background-color: $orange !important;
   }
 
   &-label {
-    color: $darkgray !important;
+    text-shadow: 0 0 2px darken($orange, 20%) !important;
+    color: lighten($orange, 50%) !important;
   }
 }
 
