--- a/src/main.scss
+++ b/src/main.scss
@@ -39,6 +39,7 @@
 @import "pagination";
 @import "loading";
 @import "popupBox";
+@import "popupConfirm";
 @import "smiles";
 
 // -----------------------------------------------------------------------------
