--- a/src/variables.scss
+++ b/src/variables.scss
@@ -36,7 +36,7 @@ $gametype-abra: #8A9AB8;
 $gametype-abra-premium: #E6C033;
 $gametype-digits: #AAAAAA;
 $gametype-referats: #90B857;
-$gametype-voc: #7A6FD1;
+$gametype-voc: $blue;
 $gametype-chars: #E6912B;
 $gametype-qual: #FF5555;
 $premium-yellow: #E6C033;
