--- a/src/userPanel.scss
+++ b/src/userPanel.scss
@@ -38,7 +38,7 @@
 
 .userpanel {
   font-family: "Montserrat", sans-serif !important;
-  border: none;
+  border-bottom: 1px solid $middlegray !important;
   background: $deepgray !important;
   color: $middlegray !important;
 
